create wrapper for infinite horizontal scroll animation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,3 +53,12 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+@keyframes loop {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
